adding rpc functions and server side implementations
