# models/pb/guideocelot.swagger.json
@@ -234,6 +234,184 @@
         ]
       }
     },
+    "/v1/creds/env": {
+      "get": {
+        "summary": "Get all known generic credentials (env).",
+        "description": "Get all known generic credentials (env).",
+        "operationId": "GetGenericCreds",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/modelsGenericWrap"
+            }
+          }
+        },
+        "tags": [
+          "creds",
+          "env",
+          "generic"
+        ]
+      },
+      "post": {
+        "summary": "Add new generic credentials",
+        "description": "Add new generic credentials.",
+        "operationId": "SetGenericCreds",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/protobufEmpty"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/modelsGenericWrap"
+            }
+          }
+        ],
+        "tags": [
+          "creds",
+          "env",
+          "generic"
+        ]
+      }
+    },
+    "/v1/creds/env/{acctName}/{identifier}": {
+      "put": {
+        "summary": "Update a Generic Credential",
+        "description": "Endpoint for updating a Generic credential in ocelot (ie ENV var). This should only be called if hte credential exists. subType is a required query param \nRefer to modelsGenericCreds for the object fields",
+        "operationId": "UpdateGenericCreds2",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/protobufEmpty"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "acctName",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "identifier",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/modelsGenericCreds"
+            }
+          }
+        ],
+        "tags": [
+          "creds",
+          "vcs"
+        ]
+      }
+    },
+    "/v1/creds/generic": {
+      "get": {
+        "summary": "Get all known generic credentials (env).",
+        "description": "Get all known generic credentials (env).",
+        "operationId": "GetGenericCreds2",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/modelsGenericWrap"
+            }
+          }
+        },
+        "tags": [
+          "creds",
+          "env",
+          "generic"
+        ]
+      },
+      "post": {
+        "summary": "Add new generic credentials",
+        "description": "Add new generic credentials.",
+        "operationId": "SetGenericCreds2",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/protobufEmpty"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/modelsGenericWrap"
+            }
+          }
+        ],
+        "tags": [
+          "creds",
+          "env",
+          "generic"
+        ]
+      }
+    },
+    "/v1/creds/generic/{acctName}/{identifier}": {
+      "put": {
+        "summary": "Update a Generic Credential",
+        "description": "Endpoint for updating a Generic credential in ocelot (ie ENV var). This should only be called if hte credential exists. subType is a required query param \nRefer to modelsGenericCreds for the object fields",
+        "operationId": "UpdateGenericCreds",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/protobufEmpty"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "acctName",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "identifier",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/modelsGenericCreds"
+            }
+          }
+        ],
+        "tags": [
+          "creds",
+          "vcs"
+        ]
+      }
+    },
     "/v1/creds/k8s": {
       "get": {
         "summary": "Retrieve all kubernetes related credentials",
@@ -1538,6 +1716,38 @@
         "exists": {
           "type": "boolean",
           "format": "boolean"
+        }
+      }
+    },
+    "modelsGenericCreds": {
+      "type": "object",
+      "properties": {
+        "acctName": {
+          "type": "string",
+          "title": "account name to associate integration cred with"
+        },
+        "subType": {
+          "$ref": "#/definitions/modelsSubCredType",
+          "title": "There is currently only one subType that is valid for GenericCreds, and it is ENV"
+        },
+        "identifier": {
+          "type": "string",
+          "title": "identifier is the unique identifier for the integration"
+        },
+        "clientSecret": {
+          "type": "string",
+          "title": "clientSecret is the secret associated with the integration cred"
+        }
+      }
+    },
+    "modelsGenericWrap": {
+      "type": "object",
+      "properties": {
+        "creds": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/modelsGenericCreds"
+          }
         }
       }
     },
